--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,24 @@
 /* You can add global styles to this file, and also import other style files */
+html
+{
+ margin:0px;
+ height:100%;
+ width:100%;
+ background:url('/../assets/images/john-towner-3Kv48NS4WUU-unsplash.jpg')no-repeat center center fixed; 
+ -webkit-background-size:cover;
+ -o-background-size:cover;
+ -moz-background-size:cover;
+ background-size:cover;
+}
+
+.background-tint {
+    background-color: rgba(13, 54, 13,.9); /* Tint color */
+    background-blend-mode: multiply;
+  }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+@font-face {
+  font-family: cocosharp;
+  src: url(./assets/fonts/coco-sharp.ttf);
+}
