--- a/src/styles.css
+++ b/src/styles.css
@@ -4,7 +4,7 @@ html
  margin:0px;
  height:100%;
  width:100%;
- background:url('/../assets/images/john-towner-3Kv48NS4WUU-unsplash.jpg')no-repeat center center fixed; 
+ background:url('~/assets/images/bgimage.jpg')no-repeat center center fixed; 
  -webkit-background-size:cover;
  -o-background-size:cover;
  -moz-background-size:cover;
