--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -4,106 +4,49 @@
 
     <div class="content" style="margin-left: 10%; margin-right: 10%; margin-top: 25px">
         <div fxLayout="row wrap" fxLayoutGap="16px grid">
-          <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
-            <img src="assets/images/angular.png" width="75px">
-            <h1>Angular</h1>
-            <p>I have eighteen months of experience working with Angular, including popular Component Libraries such as PrimeNG and Angular Material.</p>
-            <p>I co-lead development on a new front end system for a Fulfilment Order Management portal used by dozens of clients all over the world at Woodland Group.</p>
-          </div>
-          <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
-            <img src="assets/images/csharp.svg" width="75px">
-            <h1>.NET</h1>
-            <p>I have three years of experience working with C# and the .NET Core framework. This consists mainly of writing REST APIs with Swagger and the Entity Framework</p>
-            <p>I am familiar with industry standard coding principles such as SOLID, DRY, as well as version control using Git and TFS.</p>
 
-        </div>
-        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
-            <img src="assets/images/android.png" width="68px">
-            <h1>Android</h1>
-            <p>I have experience using Java and Android Studio to develop Android Applications for a variety of functions.</p>
-            <p>I am familiar with Google's ML Kit and CameraX APIs, having used both for Barcode Scanning.</p>
-        </div>
-        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
-            <img src="assets/images/sqllogo.png" height="60px">
-            <h1>SQL</h1>
-            <p>Database Management skills using SQL to maintain and develop large databases in Microsoft SQL Management Studio.</p>
-            <p>Once familiar with a database, I can write Views and Procedures of a fair level of complexity, as well as designing fast and efficient databases.</p>
-        </div>
-        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
-            <img src="assets/images/typescriptlogo.png" width="60px">
-            <h1>TypeScript</h1>
-            <p>Having started with JavaScript, I moved on to TypeScript when I learned Angular. I have a good level of understanding of advanced coding principles in TypeScript.</p>
-            <p>I can write complex procedures, asyncronous HTTP calls, and integrate seemlessly with backend systems.</p>
-        </div>
-        <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
-            <img src="assets/images/xamarinlogo.png" width="70px">
-            <h1>Xamarin</h1>
-            <p>I have an intermediate level of experience with Xamarin forms, having developed a basic desktop application, and a higher level Android App.</p>
-            <p>I can create basic applications that consume REST APIs and store data across sessions whilst waiting for internet connectivity.</p>
-        </div>
-        </div>
-        </div>
-
-    <!-- <mat-grid-list cols="3" rowHeight="2:1" style="margin-left: 15%; margin-right: 15%;">
-        <mat-grid-tile>
-            <div class="grid-box">
-                <img src="assets/images/angular.png" width="75px">
-                <h1>Angular</h1>
-                <p>I have eighteen months of experience working with Angular, including popular Component Libraries such as PrimeNG and Angular Material.</p>
-                <p>I co-lead development on a new front end system for a Fulfilment Order Management portal used by dozens of clients all over the world at Woodland Group.</p>
-            </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <div class="grid-box">
+            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
                 <img src="assets/images/csharp.svg" width="75px">
                 <h1>.NET</h1>
-                <p>I have three years of experience working with C# and the .NET Core framework. This consists mainly of writing REST APIs with Swagger and the Entity Framework</p>
-                <p>I am familiar with industry standard coding principles such as SOLID, DRY, as well as version control using Git and TFS.</p>
+                <p>I have over six years of experience working with C# and .NET. This includes backend development for Xamarin and MAUI applications, API development utilising Entity Framework. </p>
+                <p>I have experience with unit testing using Nunit and Moq, as well as benchmarking with Benchmark DotNet. </p>
             </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <div class="grid-box">
-                <img src="assets/images/android.png" width="60px">
+
+            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
+                <img src="assets/images/xamarinlogo.png" width="70px">
+                <h1>Xamarin</h1>
+                <p>I have strong experience using Xamarin Forms to create cross platform mobile applications. This includes two OEM implementations of an Android Automotive application that runs directly in-vehicle. Also worked on AliveDrive Race, a companion app to the aforementioned Automotive app that runs on iOS and Android. </p>
+                <p>Exposure to native APIs for video players and overlaying live data over videos using AVKit, AVFoundation, and Exoplayer.</p>
+            </div>
+
+            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
+                <img src="assets/images/maui.png" width="70px">
+                <h1>MAUI</h1>
+                <p>Recently made the switch to MAUI at Cosworth giving me experience porting complex components from Xamarin to MAUI. <p>
+                <p>Experience with greenfield MAUI applications that run on Android, iOS, Windows, and Mac. </p>
+            </div>
+
+            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
+                <img src="assets/images/angular.png" width="75px">
+                <h1>Angular</h1>
+                <p>Gained two years of experience working with Angular whilst working at Woodland, including popular Component Libraries such as PrimeNG and Angular Material.</p>
+                <p>I co-lead development on a new front end system for a Fulfilment Order Management portal used by dozens of clients all over the world at Woodland Group.</p>
+            </div>
+
+            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
+                <img src="assets/images/android.png" width="68px">
                 <h1>Android</h1>
-                <p>I have experience using Java and Android Studio to develop Android Applications for a variety of functions.</p>
-                <p>I am familiar with Google's ML Kit and CameraX APIs, having used both for Barcode Scanning.</p>
+                <p>I have experience using Java and Android Studio to develop native Android Applications.</p>
+                <p>I am familiar with Google's ML Kit and CameraX APIs, having used both for a Barcode Scanning application that is still used in Woodland warehouses all over the world.</p>
             </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <div class="grid-box">
+
+            <div fxFlex="33%" fxFlex.xs="100%" fxFlex.sm="33%">
                 <img src="assets/images/sqllogo.png" height="60px">
                 <h1>SQL</h1>
                 <p>Database Management skills using SQL to maintain and develop large databases in Microsoft SQL Management Studio.</p>
                 <p>Once familiar with a database, I can write Views and Procedures of a fair level of complexity, as well as designing fast and efficient databases.</p>
             </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <div class="grid-box">
-                <img src="assets/images/typescriptlogo.png" width="60px">
-                <h1>TypeScript</h1>
-                <p>Having started with JavaScript, I moved on to TypeScript when I learned Angular. I have a good level of understanding of advanced coding principles in TypeScript.</p>
-                <p>I can write complex procedures, asyncronous HTTP calls, and integrate seemlessly with backend systems.</p>
-            </div>
-        </mat-grid-tile>
-        <mat-grid-tile>
-            <div class="grid-box">
-                <img src="assets/images/typescriptlogo.png" width="60px">
-                <h1>TypeScript</h1>
-            </div>
-        </mat-grid-tile>
-      </mat-grid-list> -->
 
-    <!-- <p style="padding-left: 20%; padding-right: 20%">
-        Having worked as a Junior Developer for three years across two companies, I have gained skills and experience in multiple sections of the Development world. 
-    </p>
-
-    <p style="padding-left: 20%; padding-right: 20%">
-        My career as a Developer started in 2019 when I joined <a href="https://www.linkedin.com/company/mandon-software-limited/about/" target="_blank" style="color: #FFFFFF;">Mandon Software</a> as an Apprentice. Over the course of thirteen months I grew from a seventeen year old with no experience in Development, to a nineteen year old with a years worth of experience, countless new skills, multiple professional certificates to my name, and an industry recognised BCS Level 3 Software Development Technician qualification.
-    </p>
-    <p style="padding-left: 20%; padding-right: 20%">
-        At Mandon my main responsibility was first to learn, and second, to work with senior developers on a full frontend rewrite of a feature packed and fully customisable Insurance Broker software that is used by Insurance Brokers across three continents. The application is called 'MPACS Web'. This new frontend was built with multiple frameworks including jQuery, Bootstrap, and KendoUI. Throughout my time at Mandon I learned not only the fundamentals of web development, but how to think as a developer. My problem solving skills grew exponentially over the eighteen months I spent at Mandon, and they continue to grow to this day. 
-    </p>
-    <p style="padding-left: 20%; padding-right: 20%">
-        Mandon Software also offered me my first foray into Application Development with Xamarin. I was tasked with creating a Xamarin Forms application that would act as a launchpad for any other software on our clients' computers: a central dashboard allowing the user to quickly access any software they want, including MPACS Web. It was a simple application but it further broadened my knowledge and made me realise that there was far more to development than front end web development.
-    </p> -->
+        </div>
+    </div>
 </div>
